Update PathSegmentParser.java (#216)